added convective tsync

--- a/HD5980_calculating_t-sync.ipynb
+++ b/HD5980_calculating_t-sync.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
    "id": "c7f782d7",
    "metadata": {},
    "source": [
-    "## Hurley et al 2002 - Radiative envelopes\n",
+    "## Hurley et al 2002 - Radiative envelopes *(Fiducial)*\n",
     "Hut radiative in MESA\n",
     "\n",
     "[Hurley et al. 2002, eq 44](https://articles.adsabs.harvard.edu/pdf/2002MNRAS.329..897H), (but timescale for synchronization was derived by [Zahn (1975)](https://articles.adsabs.harvard.edu//full/1975A%26A....41..329Z/0000331.000.html) )\n",
@@ -110,6 +110,8 @@
     "\\begin{equation}\n",
     "\\frac{1}{\\tau_{sync}} = 52^{5/3} \\left( \\frac{GM}{R^3} \\right)^{1/2} \\frac{MR^2}{I} q^2_2 (1 + q_2)^{5/6} E_2 \\left(\\frac{R}{a} \\right)^{17/2}\n",
     "\\end{equation}\n",
+    "\n",
+    "(same as [eq. 2 in de Mink et al. 2009](https://www.aanda.org/articles/aa/pdf/2009/13/aa11439-08.pdf) )\n",
     "\n",
     "\n",
     "M and R are the mass and radius of the star, and a the separation\n",
@@ -123,7 +125,6 @@
     "\n",
     "Substituting all this we get\n",
     "\n",
-    "\n",
     "\\begin{equation}\n",
     "\\frac{1}{\\tau_{sync}} = (5/2) \\cdot 52^{5/3} \\cdot E_2 \\cdot (GM)^{1/2} R^{7} a^{-8.5}\n",
     "\\end{equation}"
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -171,72 +172,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hurley et al 2002 - Convective envelopes (or “turbulent viscosity” )\n",
-    "Hut convective in MESA\n",
-    "\n",
-    "Timescale for synchronization was derived by Zahn (1977, 1989)\n",
+    "# Hurley et al 2002 - Convective envelopes \n",
+    "## (or “turbulent viscosity” )\n",
+    "Hut convective in MESA, Eq 27  in [Hurley et al. 2002](https://articles.adsabs.harvard.edu/pdf/2002MNRAS.329..897H),  \n",
+    "Synchronization timescale as derived by [Zahn 1977 eg 6.1](https://articles.adsabs.harvard.edu/pdf/1977A%26A....57..383Z) :\n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{1}{\\tau_{sync}} = 3\\left(\\frac{k}{t_{something}}\\right)_c q_2^2 \\frac{M R^2}{I} \\left(\\frac{R}{a}\\right)^6\n",
+    "\\frac{1}{\\tau_{sync}} = 3\\left(\\frac{k}{t_{tide}}\\right)_c  \\frac{M R^2}{I} q_2^2 \\left(\\frac{R}{a}\\right)^6\n",
     "\\end{equation}\n",
     "\n",
+    "with $t_{tide}$ the time-scale on which significant changes in the orbit take place through tidal evolution.\n",
     "\n",
     "\n",
-    "[Hurley et al. 2002, eq 27](https://articles.adsabs.harvard.edu/pdf/2002MNRAS.329..897H) \n",
-    "[same as eq. 1 in de Mink et al. 2009](https://www.aanda.org/articles/aa/full_html/2009/13/aa11439-08/aa11439-08.html)\n"
+    "Following [eq. 1 in de Mink et al. 2009](https://www.aanda.org/articles/aa/full_html/2009/13/aa11439-08/aa11439-08.html), this is can be approximated as:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\tau_{sync} = f_{turb}\\times q^{-2} \\left(\\frac{a}{R}\\right)^{6} yr\n",
+    "\\end{equation}\n",
+    "\n",
+    "Where we assume that $f_{turb} \\approx 1$, because Zahn (1977) showed that this adequately explains the observed orbital period below which tides lead to synchronization due to the strong dependence of $R/a$\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "416bcd3d",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 227,
    "id": "b7f1c4e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synchronization timescale for best fitting model 58737.0 yr, under the assumption of turbulent viscosity damping\n",
+      "This is 0.01 % of the main sequence lifetime\n"
+     ]
+    }
+   ],
    "source": [
-    "#Hurley et al 2002 from Hut\n",
-    "# from Hut:\n",
-    "# values of k for realistic stars are 0.1-0.01, \n",
-    "# more centrally condensed star structure means lower k\n",
-    "# tau is a small lag time introduced via dissipation, \n",
-    "# such that the amplitude and direction of the tides are slightly changed\n",
-    "# T_timescale = R^3/(G M tau)\n",
+    "\"\"\"\n",
+    "Hurley et al 2002 from Hut\n",
+    "values of k for realistic stars are 0.1-0.01, \n",
+    "more centrally condensed star structure means lower k\n",
+    "tau is a small lag time introduced via dissipation, \n",
+    "such that the amplitude and direction of the tides are slightly changed\n",
+    "t_tide = R^3/(G M tau)\n",
+    "assuming spherical moment of inertia\n",
+    "\"\"\"\n",
+    "# def tau_hut(tau, k, M, R, a):\n",
+    "#     T_timescale = np.divide(np.power(R,3), M)/const.G/tau\n",
+    "#     return np.power(np.multiply(3*np.divide(k, T_timescale), \n",
+    "#                                 np.power(np.divide(R, a), 6))*5/2, \n",
+    "#                     -1).to(u.year) \n",
+    "#     #test\n",
+    "# tau_hut(1*u.second, 0.1, 1*u.Msun, 1*u.Rsun, semimajor(1*u.Msun, 1*u.year))\n",
     "\n",
-    "# assuming spherical moment of inertia\n",
     "\n",
-    "def tau_hut(tau, k, M, R, a):\n",
-    "    T_timescale = np.divide(np.power(R,3), M)/const.G/tau\n",
-    "    return np.power(np.multiply(3*np.divide(k, T_timescale), \n",
-    "                                np.power(np.divide(R, a), 6))*5/2, \n",
-    "                    -1).to(u.year)\n",
-    "    \n",
-    "    #test\n",
-    "tau_hut(1*u.second, 0.1, 1*u.Msun, 1*u.Rsun, semimajor(1*u.Msun, 1*u.year))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b127cacf",
-   "metadata": {},
-   "source": [
-    "## Zahn 1977 - Convective Envelope"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "038da9bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Zahn 1977\n",
-    "def tau_zahn_conv(R, a):\n",
-    "    return (np.power(np.divide(R,a), -6))*u.year"
+    "def tau_zahn_conv(R = 1*u.Rsun, a = 1*u.Rsun, f_turb = 1.):\n",
+    "    return (f_turb * (a/R)**2)*u.yr\n",
+    "\n",
+    "t_sync_conv = tau_zahn_conv(10**m.hist.log_R[ZAMS_i] * u.Rsun, a_ZAMS)\n",
+    "\n",
+    "print(f'Synchronization timescale for best fitting model {np.round(t_sync_rad)}, under the assumption of turbulent viscosity damping')\n",
+    "print(f'This is {np.round(t_sync_conv/MS_lifetime, 4) *100} % of the main sequence lifetime')\n",
+    "\n"
    ]
   },
   {
@@ -290,7 +290,6 @@
     "# zahn 2008\n",
     "\n",
     "# assuming spherical moment of inertia\n",
-    "\n",
     "def tau_zahn_visc(t_diss, P, Omega, M, R, a):\n",
     "    omega = 2*np.pi*np.power(P, -1)\n",
     "    return (t_diss*np.multiply(np.divide(omega, np.abs(omega-Omega)), \n",
@@ -331,130 +330,11 @@
     "#Yoon, Woosley, Langer 2010 \n",
     "def tau_YWL2010(f_sync, L, M, R, a):\n",
     "    return f_sync/2**(3/8)*1.44*10**(1.6)*np.multiply(np.multiply(np.power(L/u.Lsun, -1/4), np.power(M/u.Msun, -1/8)), \n",
-    "                                             np.multiply(np.power(R/u.Rsun, 9/8), np.power(np.divide(a,R), 33/8)))*u.year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7b745a36",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$1.8494935 \\times 10^{11} \\; \\mathrm{yr}$"
-      ],
-      "text/plain": [
-       "<Quantity 1.84949348e+11 yr>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "                                             np.multiply(np.power(R/u.Rsun, 9/8), np.power(np.divide(a,R), 33/8)))*u.year\n",
+    "    \n",
+    "    \n",
     "# test\n",
     "tau_YWL2010(1, 1*u.Lsun, 1*u.Msun, 1*u.Rsun, semimajor(1*u.Msun, 1*u.year))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40a8bbc5",
-   "metadata": {},
-   "source": [
-    "\\begin{equation}\n",
-    "\\tau_{sync} = f\\times q^{-2} \\left(\\frac{a}{R}\\right)^{6} yr\n",
-    "\\end{equation}\n",
-    "https://articles.adsabs.harvard.edu/pdf/1977A%26A....57..383Z (eq 6.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "72f4a278",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$9.8859965 \\times 10^{13} \\; \\mathrm{yr}$"
-      ],
-      "text/plain": [
-       "<Quantity 9.88599649e+13 yr>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# test\n",
-    "tau_zahn_conv(1*u.Rsun, semimajor(1*u.Msun, 1*u.year))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6fbe086f",
-   "metadata": {},
-   "source": [
-    "## de Mink 2009 (from Zahn 1975) - Radiative"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8e0572d",
-   "metadata": {},
-   "source": [
-    "\\begin{equation}\n",
-    "\\tau_{sync} = 52^{-5/3}E_2 \\left(\\frac{I}{M R^2}\\right)\\left(\\frac{G M}{R^3}\\right)^{-1/2} q^{-2}(1+q)^{-5/6}\\left(\\frac{R}{a}\\right)^{-17/2}\n",
-    "\\end{equation}\n",
-    "    \n",
-    "https://www.aanda.org/articles/aa/pdf/2009/13/aa11439-08.pdf (eq 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "5ed28202",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#zahn 1975\n",
-    "def tau_zahn_rad(R, a, M):\n",
-    "    G = const.G\n",
-    "    E2 = 1\n",
-    "    I = (2/5)*np.multiply(M,np.power(R,2))\n",
-    "    f_rad = 52**-(5/3)*E2*(2/5)*G**-0.5*np.divide(np.power(R,3/2),\n",
-    "                                                  np.power(M,1/2))\n",
-    "    return (2**(-5/6)*np.multiply(f_rad, np.power(np.divide(R,a),-17/2))).to(u.year)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "ed63a3c3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$1.0484514 \\times 10^{12} \\; \\mathrm{yr}$"
-      ],
-      "text/plain": [
-       "<Quantity 1.04845135e+12 yr>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# test\n",
-    "tau_zahn_rad(1*u.Rsun, semimajor(1*u.Msun, 1*u.year), 1*u.Msun)"
    ]
   },
   {
