working on convective visc. part

--- a/HD5980_calculating_t-sync.ipynb
+++ b/HD5980_calculating_t-sync.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 229,
    "id": "b7f1c4e7",
    "metadata": {},
    "outputs": [
@@ -204,8 +204,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Synchronization timescale for best fitting model 58737.0 yr, under the assumption of turbulent viscosity damping\n",
-      "This is 0.01 % of the main sequence lifetime\n"
+      "Synchronization timescale for best fitting model 55471.0 yr, under the assumption of turbulent viscosity damping\n",
+      "This is 217.3 % of the main sequence lifetime\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
     "\n",
     "#Zahn 1977\n",
     "def tau_zahn_conv(R = 1*u.Rsun, a = 1*u.Rsun, f_turb = 1.):\n",
-    "    return (f_turb * (a/R)**2)*u.yr\n",
+    "    return (f_turb * (a/R)**6)*u.yr\n",
     "\n",
     "t_sync_conv = tau_zahn_conv(10**m.hist.log_R[ZAMS_i] * u.Rsun, a_ZAMS)\n",
     "\n",
@@ -246,18 +246,29 @@
    "source": [
     "## Zahn 2008 - weak friction approximation Viscosity\n",
     "\n",
+    "[Zahn 2008 eq 2.5](https://arxiv.org/pdf/0807.4870.pdf )\n",
+    "\n",
     "(seems very similar to Hut treatment for convective envelopes)\n",
     "\\begin{equation}\n",
-    "\\frac{1}{\\tau_{sync}} = \\frac{1}{t_{diss}} \\left(\\frac{\\omega - \\Omega}{\\omega}\\right) q^2 \\frac{M R^2}{I} \\left(\\frac{R}{a}\\right)^6\n",
+    "\\frac{1}{\\tau_{sync}} = \\frac{1}{t_{diss}} \\left(\\frac{\\omega - \\Omega}{\\omega}\\right)  \\frac{M R^2}{I} q^2 \\left(\\frac{R}{a}\\right)^6\n",
     "\\end{equation}\n",
+    "\n",
+    "Assuming again $I \\approx (2/5) M R^2$ is the moment of inertia of the perturbed star\n",
+    "\n",
+    "and $t_{diss}= R^2/ < \\nu >$ is the viscous dissipation time, where $<\\nu>$ is a suitable\n",
+    "average of the kinematic viscosity.\n",
+    "\n",
+    "Fig. 3 of Zahn (2008), who reproduces results from Penev et al. (2007), gives a summary of the\n",
+    "range in expected viscosity values:\n",
+    "$<\\nu> ∼ 10^{11} − 10^{13}cm^2/s.$\n",
+    "\n",
+    " $\\omega$ is the orbital angular velocity and $\\Omega$ is the rotational angular velocity\n",
+    "\n",
+    " adopting againg $q\\approx 1$ in our case we get:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\tau_{sync} = t_{diss} \\left(\\frac{\\omega}{\\omega - \\Omega}\\right) q^{-2} \\frac{I}{M R^2} \\left(\\frac{a}{R}\\right)^6\n",
-    "\\end{equation}\n",
-    "\n",
-    "where $\\omega$ is the orbital angular velocity and $\\Omega$ is the rotational angular velocity\n",
-    "\n",
-    "https://arxiv.org/pdf/0807.4870.pdf (eq 2.5)"
+    "\\frac{1}{\\tau_{sync}} =  5/2 \\frac{< \\nu >}{R^2} \\left(\\frac{\\omega - \\Omega}{\\omega}\\right)  \\left(\\frac{R}{a}\\right)^6\n",
+    "\\end{equation}"
    ]
   },
   {
@@ -292,6 +303,7 @@
     "# assuming spherical moment of inertia\n",
     "def tau_zahn_visc(t_diss, P, Omega, M, R, a):\n",
     "    omega = 2*np.pi*np.power(P, -1)\n",
+    "    t_diss * (omega - Omega)/omega \n",
     "    return (t_diss*np.multiply(np.divide(omega, np.abs(omega-Omega)), \n",
     "                              2/5*np.power(np.divide(a, R), 6))).to(u.year)\n",
     "    \n",
@@ -346,21 +358,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error for model 88\n",
+      "Error for model 274\n",
+      "Error for model 166\n",
+      "Error for model 247\n",
+      "Error for model 248\n",
+      "Error for model 437\n",
+      "Error for model 147\n",
+      "Error for model 151\n",
+      "Error for model 170\n",
+      "Error for model 73\n",
+      "Error for model 167\n",
+      "Error for model 411\n",
+      "Error for model 140\n",
+      "Error for model 142\n",
+      "Error for model 150\n",
+      "Error for model 273\n",
+      "Error for model 337\n",
+      "Error for model 388\n",
+      "Error for model 269\n",
+      "Error for model 105\n",
+      "Error for model 265\n",
+      "Error for model 77\n",
+      "Error for model 218\n",
+      "Error for model 290\n",
+      "Error for model 149\n",
+      "Error for model 109\n",
+      "Error for model 292\n",
+      "Error for model 242\n",
+      "Error for model 158\n",
+      "Error for model 243\n",
+      "Error for model 360\n",
+      "Error for model 250\n",
+      "Error for model 221\n",
+      "Error for model 244\n",
+      "Error for model 339\n",
+      "Error for model 268\n",
+      "Error for model 189\n",
+      "Error for model 311\n",
+      "Error for model 288\n",
+      "Error for model 253\n",
+      "Error for model 343\n",
+      "Error for model 95\n",
       "Error for model 36\n",
+      "Error for model 249\n",
+      "Error for model 133\n",
+      "Error for model 291\n",
+      "Error for model 74\n",
+      "Error for model 226\n",
+      "Error for model 173\n",
+      "Error for model 390\n",
+      "Error for model 174\n",
+      "Error for model 299\n",
       "Error for model 83\n",
+      "Error for model 214\n",
+      "Error for model 289\n",
+      "Error for model 312\n",
+      "Error for model 366\n",
+      "Error for model 298\n",
+      "Error for model 458\n",
+      "Error for model 313\n",
+      "Error for model 155\n",
+      "Error for model 316\n",
+      "Error for model 433\n",
+      "Error for model 70\n",
+      "Error for model 386\n",
+      "Error for model 293\n",
+      "Error for model 460\n",
+      "Error for model 344\n",
+      "Error for model 120\n",
+      "Error for model 110\n",
+      "Error for model 436\n",
+      "Error for model 267\n",
+      "Error for model 202\n",
+      "Error for model 137\n",
+      "Error for model 364\n",
       "Error for model 10\n",
+      "Error for model 97\n",
+      "Error for model 246\n",
+      "Error for model 219\n",
+      "Error for model 198\n",
+      "Error for model 456\n",
+      "Error for model 317\n",
+      "Error for model 136\n",
+      "Error for model 318\n",
+      "Error for model 270\n",
+      "Error for model 125\n",
+      "Error for model 194\n",
+      "Error for model 119\n",
+      "Error for model 297\n",
+      "Error for model 230\n",
+      "Error for model 157\n",
+      "Error for model 96\n",
+      "Error for model 172\n",
+      "Error for model 367\n",
+      "Error for model 190\n",
+      "Error for model 213\n",
+      "Error for model 104\n",
+      "Error for model 164\n",
+      "Error for model 314\n",
+      "Error for model 295\n",
+      "Error for model 272\n",
       "Error for model 11\n",
+      "Error for model 100\n",
+      "Error for model 134\n",
+      "Error for model 200\n",
+      "Error for model 116\n",
+      "Error for model 245\n",
+      "Error for model 195\n",
+      "Error for model 138\n",
+      "Error for model 75\n",
+      "Error for model 135\n",
+      "Error for model 117\n",
+      "Error for model 241\n",
+      "Error for model 71\n",
+      "Error for model 389\n",
+      "Error for model 414\n",
+      "Error for model 99\n",
+      "Error for model 143\n",
+      "Error for model 180\n",
+      "Error for model 126\n",
+      "Error for model 161\n",
+      "Error for model 204\n",
+      "Error for model 176\n",
+      "Error for model 457\n",
+      "Error for model 365\n",
+      "Error for model 215\n",
+      "Error for model 238\n",
+      "Error for model 191\n",
+      "Error for model 184\n",
+      "Error for model 192\n",
+      "Error for model 103\n",
+      "Error for model 413\n",
+      "Error for model 98\n",
+      "Error for model 459\n",
+      "Error for model 128\n",
+      "Error for model 229\n",
+      "Error for model 144\n",
+      "Error for model 72\n",
+      "Error for model 146\n",
+      "Error for model 227\n",
+      "Error for model 481\n",
+      "Error for model 341\n",
+      "Error for model 141\n",
+      "Error for model 225\n",
+      "Error for model 107\n",
+      "Error for model 178\n",
+      "Error for model 266\n",
+      "Error for model 240\n",
+      "Error for model 385\n",
+      "Error for model 345\n",
+      "Error for model 320\n",
+      "Error for model 336\n",
+      "Error for model 156\n",
+      "Error for model 131\n",
+      "Error for model 123\n",
+      "Error for model 504\n",
+      "Error for model 338\n",
+      "Error for model 160\n",
+      "Error for model 165\n",
+      "Error for model 101\n",
       "Error for model 49\n",
+      "Error for model 148\n",
+      "Error for model 435\n",
       "Error for model .mesa_temp_cache\n",
-      "Error for model 14\n"
+      "Error for model 168\n",
+      "Error for model 179\n",
+      "Error for model 252\n",
+      "Error for model 132\n",
+      "Error for model 94\n",
+      "Error for model 199\n",
+      "Error for model 78\n",
+      "Error for model 361\n",
+      "Error for model 163\n",
+      "Error for model 319\n",
+      "Error for model 201\n",
+      "Error for model 296\n",
+      "Error for model 217\n",
+      "Error for model 153\n",
+      "Error for model 93\n",
+      "Error for model 206\n",
+      "Error for model 368\n",
+      "Error for model 122\n",
+      "Error for model 482\n",
+      "Error for model 197\n",
+      "Error for model 14\n",
+      "Error for model 216\n",
+      "Error for model 391\n",
+      "Error for model 412\n",
+      "Error for model 152\n",
+      "Error for model 121\n",
+      "Error for model 362\n",
+      "Error for model 118\n",
+      "Error for model 196\n",
+      "Error for model 124\n",
+      "Error for model 480\n",
+      "Error for model 239\n",
+      "Error for model 188\n",
+      "Error for model 287\n",
+      "Error for model 315\n",
+      "Error for model 505\n",
+      "Error for model 275\n",
+      "Error for model 321\n",
+      "Error for model 224\n",
+      "Error for model 434\n",
+      "Error for model 264\n",
+      "Error for model 145\n",
+      "Error for model 322\n",
+      "Error for model 409\n",
+      "Error for model 483\n",
+      "Error for model 263\n",
+      "Error for model 130\n",
+      "Error for model 384\n",
+      "Error for model 193\n",
+      "Error for model 223\n",
+      "Error for model 207\n",
+      "Error for model 276\n",
+      "Error for model 271\n",
+      "Error for model 410\n",
+      "Error for model 175\n",
+      "Error for model 222\n",
+      "Error for model 220\n",
+      "Error for model 203\n",
+      "Error for model 181\n",
+      "Error for model 127\n",
+      "Error for model 108\n",
+      "Error for model 79\n",
+      "Error for model 183\n",
+      "Error for model 506\n",
+      "Error for model 294\n",
+      "Error for model 177\n",
+      "Error for model 387\n",
+      "Error for model 342\n",
+      "Error for model 363\n",
+      "Error for model 169\n",
+      "Error for model 340\n",
+      "Error for model 154\n",
+      "Error for model 171\n",
+      "Error for model 139\n",
+      "Error for model 102\n"
      ]
     }
    ],
@@ -372,6 +614,7 @@
     "verbose = False\n",
     "\n",
     "radiative_sync_times = np.array([])\n",
+    "convective_sync_times = np.array([])\n",
     "MS_lifetimes = np.array([])\n",
     "for subdir in os.listdir(dir):\n",
     "    if subdir in ['photos', 'LOGS', 'LOGS1']:\n",
@@ -395,8 +638,12 @@
     "                # Synchronization timescale for a radiative envelope\n",
     "                t_sync_rad = tau_sync_Hurley_rad(m.hist.star_mass[ZAMS_i] * u.Msun, 10**m.hist.log_R[ZAMS_i] * u.Rsun, a_ZAMS)\n",
     "                \n",
+    "                # Synchronization timescale for a convective envelope\n",
+    "                t_sync_conv = tau_zahn_conv(10**m.hist.log_R[ZAMS_i] * u.Rsun, a_ZAMS)\n",
+    "\n",
     "                # Append to lists\n",
     "                radiative_sync_times.append(t_sync_rad.value)\n",
+    "                convective_sync_times.append(t_sync_conv.value)\n",
     "                MS_lifetimes.append(MS_lifetime.value)\n",
     "                \n",
     "                if verbose:\n",
