corrected and updated functions

--- a/HD5980_calculating_t-sync.ipynb
+++ b/HD5980_calculating_t-sync.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 238,
    "id": "0b28613d",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -132,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a_ZAMS 217.21657885655745 solRad\n",
+      "a_ZAMS 217.21657885655745 solRad P_ZAMS 1.9949616349256307 d\n",
       "Synchronization timescale for best fitting model 58737.0 yr, under the assumption of radiative damping\n",
       "This is 2.0 % of the main sequence lifetime\n"
      ]
@@ -157,7 +157,7 @@
     "a_ZAMS =  Kepler(m1 = m.hist.star_mass[ZAMS_i] * u.Msun, m2 =m.hist.star_mass[ZAMS_i] * u.Msun,\n",
     "                 P = m.hist.period_days[ZAMS_i] * u.day)\n",
     "\n",
-    "print('a_ZAMS', a_ZAMS)\n",
+    "print('a_ZAMS', a_ZAMS, 'P_ZAMS', m.hist.period_days[ZAMS_i] * u.day)\n",
     "\n",
     "t_sync_rad = tau_sync_Hurley_rad(m.hist.star_mass[ZAMS_i] * u.Msun, 10**m.hist.log_R[ZAMS_i] * u.Rsun, a_ZAMS)\n",
     "print(f'Synchronization timescale for best fitting model {np.round(t_sync_rad)}, under the assumption of radiative damping')\n",
@@ -170,6 +170,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "884961b4",
+   "metadata": {},
+   "source": [
+    "# Yoon, Woosley, Langer 2010\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\tau_{sync} = f_{sync} \\frac{1.44\\times 10^{1.6}}{q(1+q)^{3/8}} \\left(\\frac{L_\\odot}{L}\\right)^{1/4} \\left(\\frac{M_\\odot}{M}\\right)^{1/8} \\left(\\frac{R}{R_\\odot}\\right)^{9/8} \\left(\\frac{d}{R}\\right)^{33/8} years\n",
+    "\\end{equation}\n",
+    "\n",
+    "[YWL 2010, equation 3](https://iopscience.iop.org/article/10.1088/0004-637X/725/1/940/pdf)\n",
+    "\n",
+    "following Wellstein (2001) (see also Detmers et al. 2008). We assume a synchronization timescale according to Tassoul (1987, 2000) who considered tidally driven meridional circulations as the main mechanism for tidal dissipation\n",
+    "\n",
+    "we again adopt $q = 1$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "id": "be452531",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_sync_YWL 516142.1690333371 yr\n",
+      "Synchronization timescale for best fitting model 516142.0 yr, under the assumption of meridional circulation\n",
+      "This is 18.38 % of the main sequence lifetime\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Yoon, Woosley, Langer 2010 \n",
+    "def tau_YWL2010(f_sync = 1, L = 1*u.Lsun, M = 1*u.Msun, R = 1*u.Rsun, a =1*u.Rsun):\n",
+    "    tau = ((f_sync * (1.44 * 10**(1.6)) * (1/L)**(1./4) * \n",
+    "            (1/M)**(1./8) * (R)**(9./8) * (a/R)**(33/8)) ).value\n",
+    "    return tau * u.yr\n",
+    "    \n",
+    "t_sync_YWL = tau_YWL2010(L = 10**m.hist.log_L[ZAMS_i]*u.Lsun, \n",
+    "            M = m.hist.star_mass[ZAMS_i]*u.Msun, \n",
+    "            R = 10**m.hist.log_R[ZAMS_i]*u.Rsun, \n",
+    "            a = a_ZAMS)\n",
+    "\n",
+    "print('t_sync_YWL', t_sync_YWL)\n",
+    "\n",
+    "print(f'Synchronization timescale for best fitting model {np.round(t_sync_YWL)}, under the assumption of meridional circulation')\n",
+    "print(f'This is {np.round(t_sync_YWL/MS_lifetime, 4) *100} % of the main sequence lifetime')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Hurley et al 2002 - Convective envelopes \n",
@@ -178,25 +230,33 @@
     "Synchronization timescale as derived by [Zahn 1977 eg 6.1](https://articles.adsabs.harvard.edu/pdf/1977A%26A....57..383Z) :\n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{1}{\\tau_{sync}} = 3\\left(\\frac{k}{t_{tide}}\\right)_c  \\frac{M R^2}{I} q_2^2 \\left(\\frac{R}{a}\\right)^6\n",
+    "\\frac{1}{\\tau_{sync}} = 3\\left(\\frac{k}{t_{F}}\\right)_c  \\frac{M R^2}{I} q_2^2 \\left(\\frac{R}{a}\\right)^6\n",
     "\\end{equation}\n",
     "\n",
-    "with $t_{tide}$ the time-scale on which significant changes in the orbit take place through tidal evolution.\n",
+    "with $t_{F}$ the time-scale on which significant changes in the orbit take place through tidal evolution.\n",
+    "and $k$ is the the apsidal motion constant of the star, which takes into account the structure of the star.\n",
     "\n",
+    "Assuming again $I \\approx (2/5) M R^2$ is the moment of inertia of the perturbed star, and setting $q=1$, we can simplify to:\n",
     "\n",
-    "Following [eq. 1 in de Mink et al. 2009](https://www.aanda.org/articles/aa/full_html/2009/13/aa11439-08/aa11439-08.html), this is can be approximated as:\n",
+    "\\begin{equation}\n",
+    "\\frac{1}{\\tau_{sync}} = 15/2 \\left(\\frac{k}{t_{F}}\\right)_c  \\left(\\frac{R}{a}\\right)^6\n",
+    "\\end{equation}\n",
+    "\n",
+    " [de Mink et al. 2009](https://www.aanda.org/articles/aa/full_html/2009/13/aa11439-08/aa11439-08.html) (eq. 1) approximate this as:\n",
     "\n",
     "\\begin{equation}\n",
     "\\tau_{sync} = f_{turb}\\times q^{-2} \\left(\\frac{a}{R}\\right)^{6} yr\n",
     "\\end{equation}\n",
     "\n",
-    "Where we assume that $f_{turb} \\approx 1$, because Zahn (1977) showed that this adequately explains the observed orbital period below which tides lead to synchronization due to the strong dependence of $R/a$\n",
+    "With $f_{turb} \\approx 1$, following [Zahn 1977 eg 6.1](https://articles.adsabs.harvard.edu/pdf/1977A%26A....57..383Z), who showed that this adequately explains the observed orbital period below which tides lead to synchronization due to the strong dependence of $R/a$'\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 294,
    "id": "b7f1c4e7",
    "metadata": {},
    "outputs": [
@@ -204,8 +264,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Synchronization timescale for best fitting model 55471.0 yr, under the assumption of turbulent viscosity damping\n",
-      "This is 217.3 % of the main sequence lifetime\n"
+      "Synchronization timescale for best fitting model 58737.0 yr, under the assumption of turbulent viscosity damping\n",
+      "This is 101.67999999999999 % of the main sequence lifetime\n"
      ]
     }
    ],
@@ -224,24 +284,43 @@
     "#     return np.power(np.multiply(3*np.divide(k, T_timescale), \n",
     "#                                 np.power(np.divide(R, a), 6))*5/2, \n",
     "#                     -1).to(u.year) \n",
-    "#     #test\n",
+    "#test\n",
     "# tau_hut(1*u.second, 0.1, 1*u.Msun, 1*u.Rsun, semimajor(1*u.Msun, 1*u.year))\n",
     "\n",
-    "\n",
     "#Zahn 1977\n",
-    "def tau_zahn_conv(R = 1*u.Rsun, a = 1*u.Rsun, f_turb = 1.):\n",
+    "def tau_zahn_conv_simpl(R = 1*u.Rsun, a = 1*u.Rsun, f_turb = 1.):\n",
     "    return (f_turb * (a/R)**6)*u.yr\n",
     "\n",
-    "t_sync_conv = tau_zahn_conv(10**m.hist.log_R[ZAMS_i] * u.Rsun, a_ZAMS)\n",
+    "\n",
+    "t_sync_conv = tau_zahn_conv_simpl(10**m.hist.log_R[ZAMS_i] * u.Rsun, a_ZAMS)\n",
     "\n",
     "print(f'Synchronization timescale for best fitting model {np.round(t_sync_rad)}, under the assumption of turbulent viscosity damping')\n",
-    "print(f'This is {np.round(t_sync_conv/MS_lifetime, 4) *100} % of the main sequence lifetime')\n",
-    "\n"
+    "print(f'This is {np.round(t_sync_conv/MS_lifetime, 4) *100} % of the main sequence lifetime')\n"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "5baeb7aa",
    "metadata": {},
    "source": [
     "## Zahn 2008 - weak friction approximation Viscosity\n",
@@ -253,22 +332,76 @@
     "\\frac{1}{\\tau_{sync}} = \\frac{1}{t_{diss}} \\left(\\frac{\\omega - \\Omega}{\\omega}\\right)  \\frac{M R^2}{I} q^2 \\left(\\frac{R}{a}\\right)^6\n",
     "\\end{equation}\n",
     "\n",
-    "Assuming again $I \\approx (2/5) M R^2$ is the moment of inertia of the perturbed star\n",
+    "$\\omega$ is the rotation angular velocity of the perturbed star, while $\\Omega$ is the orbital angular velocity. \n",
     "\n",
-    "and $t_{diss}= R^2/ < \\nu >$ is the viscous dissipation time, where $<\\nu>$ is a suitable\n",
-    "average of the kinematic viscosity.\n",
+    " $t_{diss}= R^2/ < \\nu >$ is the viscous dissipation time, where $<\\nu>$ is a suitable average of the kinematic viscosity.\n",
+    "\n",
+    "Assuming again $I \\approx (2/5) M R^2$ is the moment of inertia of the perturbed star, adopting againg $q\\approx 1$ in our case, and defining $\\beta = \\omega/\\Omega$ we get:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{1}{\\tau_{sync}} =  5/2 < \\nu > \\left(\\beta - \\frac{1}{\\beta}\\right) R^4 \\left(\\frac{1}{a}\\right)^6\n",
+    "\\end{equation}\n",
+    "\n",
     "\n",
     "Fig. 3 of Zahn (2008), who reproduces results from Penev et al. (2007), gives a summary of the\n",
     "range in expected viscosity values:\n",
-    "$<\\nu> ∼ 10^{11} − 10^{13}cm^2/s.$\n",
+    "$<\\nu> ∼ 10^{11} − 10^{13}cm^2/s.$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beta - 1/beta 0.025593432595670706\n",
+      "<vmin> 0.06520185631157652 solRad2 / yr\n",
+      "R^4/a^6 1.053025507740356e-09 1 / solRad2\n",
+      "1.7572250640671154e-12 1 / yr\n",
+      "227631626807.20926 yr\n"
+     ]
+    }
+   ],
+   "source": [
+    "################\n",
+    "# First to caculate beta\n",
+    "# Orbital angular velocity (in 1/day units)\n",
+    "Omega = 2 * np.pi / (m.hist.period_days[ZAMS_i] * u.day)\n",
     "\n",
-    " $\\omega$ is the orbital angular velocity and $\\Omega$ is the rotational angular velocity\n",
+    "# Calculate omega star\n",
+    "v_surf = m.hist.surf_avg_v_rot[ZAMS_i] * (u.km / u.s)\n",
+    "omega = v_surf.to(u.Rsun / u.yr) / (10 ** m.hist.log_R[ZAMS_i] * u.Rsun) #v_surf / radius\n",
     "\n",
-    " adopting againg $q\\approx 1$ in our case we get:\n",
+    "beta = omega / Omega.to(u.yr ** -1)\n",
+    "# print(f'beta = {beta}')\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\frac{1}{\\tau_{sync}} =  5/2 \\frac{< \\nu >}{R^2} \\left(\\frac{\\omega - \\Omega}{\\omega}\\right)  \\left(\\frac{R}{a}\\right)^6\n",
-    "\\end{equation}"
+    "####################\n",
+    "#Zahn 1977\n",
+    "def tau_zahn_conv(v_avg = 1*(u.Rsun**2/u.year), beta = 1, R = 1*u.Rsun, a = 1*u.Rsun):\n",
+    "    return 1. / ( (5/2) * v_avg * (beta - 1./beta) * R** 4 / a**6)\n",
+    "\n",
+    "A = beta - 1./beta\n",
+    "print('beta - 1/beta', A)\n",
+    "\n",
+    "\n",
+    "v_min = 1e13 * u.cm**2 / u.s\n",
+    "B = v_min.to(u.Rsun**2/u.year)\n",
+    "print('<vmin>', B)\n",
+    "\n",
+    "\n",
+    "C = (10 ** m.hist.log_R[ZAMS_i] * u.Rsun)**4 /  a_ZAMS**6 \n",
+    "print('R^4/a^6', C)\n",
+    "\n",
+    "print(A * B * C)\n",
+    "\n",
+    "\n",
+    "t_conv = tau_zahn_conv(v_avg = v_min.to(u.Rsun**2/u.year), beta = beta, \n",
+    "                       R = 10**m.hist.log_R[ZAMS_i] * u.Rsun, a = a_ZAMS)\n",
+    "\n",
+    "print(t_conv)"
    ]
   },
   {
@@ -314,40 +447,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884961b4",
-   "metadata": {},
-   "source": [
-    "## Yoon, Woosley, Langer 2010"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0d67f4d9",
    "metadata": {},
-   "source": [
-    "\\begin{equation}\n",
-    "\\tau_{sync} = f_{sync} \\frac{1.44\\times 10^{1.6}}{q(1+q)^{3/8}} \\left(\\frac{L_\\odot}{L}\\right)^{1/4} \\left(\\frac{M_\\odot}{M}\\right)^{1/8} \\left(\\frac{R}{R_\\odot}\\right)^{9/8} \\left(\\frac{d}{R}\\right)^{33/8} years\n",
-    "\\end{equation}\n",
-    "\n",
-    "[YWL 2010, equation 3](https://iopscience.iop.org/article/10.1088/0004-637X/725/1/940/pdf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "be452531",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Yoon, Woosley, Langer 2010 \n",
-    "def tau_YWL2010(f_sync, L, M, R, a):\n",
-    "    return f_sync/2**(3/8)*1.44*10**(1.6)*np.multiply(np.multiply(np.power(L/u.Lsun, -1/4), np.power(M/u.Msun, -1/8)), \n",
-    "                                             np.multiply(np.power(R/u.Rsun, 9/8), np.power(np.divide(a,R), 33/8)))*u.year\n",
-    "    \n",
-    "    \n",
-    "# test\n",
-    "tau_YWL2010(1, 1*u.Lsun, 1*u.Msun, 1*u.Rsun, semimajor(1*u.Msun, 1*u.year))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
