--- a/HD5980_calculating_t-sync.ipynb
+++ b/HD5980_calculating_t-sync.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
      "text": [
       "model number at ZAMS =  50\n",
       "/mnt/home/lvanson/ceph/ksharpe/results//dense_mass_hastings_grid/336/LOGS1/profile1.data\n",
-      "star age at this profile 1586174.0950782243\n",
+      "star age at this profile 1586174.0950782243 compared to hist value: 52150.075753848825\n",
       "('zone', 'mass', 'logR', 'logT', 'logRho', 'logP', 'x_mass_fraction_H', 'y_mass_fraction_He', 'z_mass_fraction_metals', 'log_mlt_D_mix', 'mixing_type', 'log_D_mix', 'log_D_mix_non_rotation', 'log_D_conv', 'am_log_D_ES')\n"
      ]
     },
@@ -210,7 +210,7 @@
     "\n",
     "# Load the profile at ZAMS\n",
     "m.loadProfile(f = dir + str(subdir) + '/LOGS1',num = Model_Num_ZAMS) #  prof = 18 )# (I found prof 18 is when star was youngest)\n",
-    "print('star age at this profile', m.prof.star_age)\n",
+    "print('star age at this profile', m.prof.star_age, 'compared to hist value:', m.hist.star_age[ZAMS_i])\n",
     "\n",
     "# ALL data column names\n",
     "print(m.prof.data.dtype.names)\n",
